More progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -95,8 +95,8 @@ There have been recent calls highlighting the need for research that brings toge
 [somewhere should state why it is important to generalize Gaussian error model] [Include stochastic simulators as third challenge?]
 
 \noindent
-\textbf{Research Plan.} An emphasis throughout this research will be the principled quantification of uncertainty, which is made more difficult
-as increasingly complex statistical models demand additional computational approximation techniques. Therefore, I will begin by addressing fundamental issues of uncertainty in standard static, deterministic models. Specifically, I will develop methods for incorporating emulator uncertainty into the statistical inference algorithm in order to achieve more ``honest'' uncertainty quantification. With this foundation established, I will then be in a position to integrate spatiotemporal dynamics into the statistical model, as well as consider the issue of stochastic simulators. These modeling steps will pose increasingly difficult computational challenges, which I intend to address by developing approximation and dimensionality reduction techniques. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze}. 
+\textbf{Research Plan.} Uncertainty quantification is a major theme underlying each stage of this proposal, and is made more difficult
+as increasingly complex statistical models require additional approximation techniques. Therefore, I will begin by addressing fundamental issues of uncertainty in the relatively simpler static, deterministic setting. Specifically, I will develop methods for incorporating emulator uncertainty into the statistical inference algorithm in order to achieve more ``honest'' uncertainty quantification. With this foundation established, I will then be in a position to integrate spatiotemporal dynamics into the statistical model, as well as consider the issue of stochastic simulators. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze, Canadell}. 
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by exploring the ramifications of approximating the computationally expensive model $f$ with the  cheaper Gaussian process emulator $\hat{f}$. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$. However, this fails to account
  for the uncertainty introduced by the emulator approximation, resulting in overly confident posterior estimates. This begs the question: what is the ``correct'' way to propagate the emulator uncertainty through the inference procedure? In the current literature, this question is either largely ignored or addressed in an ad hoc manner [cite]. Gaining a rigorous understanding of methods for propagating emulator uncertainty is essential to ensure that model predictions are not inaccurately presented as overly confident. Various papers have offered bespoke solutions to this problem \cite{Cleary, Fer}, but no comprehensive
