--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -99,21 +99,21 @@ There have been recent calls highlighting the need for research that brings toge
 as increasingly complex statistical models require additional approximation techniques. Therefore, I will begin by addressing fundamental issues of uncertainty in the relatively simpler static, deterministic setting. Specifically, I will develop methods for incorporating emulator uncertainty into the statistical inference algorithm in order to achieve more ``honest'' uncertainty quantification. With this foundation established, I will then be in a position to integrate spatiotemporal dynamics into the statistical model, as well as consider the issue of stochastic simulators. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze, Canadell}. 
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by exploring the ramifications of approximating the computationally expensive model $f$ with the  cheaper Gaussian process emulator $\hat{f}$. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$. However, this fails to account
- for the uncertainty introduced by the emulator approximation, resulting in overly confident posterior estimates. This begs the question: what is the ``correct'' way to propagate the emulator uncertainty through the inference procedure? In the current literature, this question is either largely ignored or addressed in an ad hoc manner [cite]. Gaining a rigorous understanding of methods for propagating emulator uncertainty is essential to ensure that model predictions are not inaccurately presented as overly confident. Various papers have offered bespoke solutions to this problem \cite{Cleary, Fer}, but no comprehensive
+ for the uncertainty introduced by the emulator approximation, resulting in overly confident posterior estimates. This begs the question: what is the ``correct'' way to propagate the emulator uncertainty through the inference procedure? In the current literature, this question is either largely ignored or addressed in an ad hoc manner \cite{Cleary, Fer}. Gaining a rigorous understanding of methods for propagating emulator uncertainty is essential to ensure that model predictions are not inaccurately presented as overly confident. Various papers have offered bespoke solutions to this problem \cite{Cleary, Fer}, but no comprehensive
 methodological study has been conducted. Moreover, these existing methods consider only the Gaussian error model and treat emulator uncertainty in an independent fashion, failing to take advantage of the correlation in Gaussian process predictions. I will address these gaps in the literature by (i.) conducting a rigorous comparison of methods for propagating emulator uncertainty under the standard Gaussian noise model, (ii.) developing novel techniques which take advantage of the Gaussian process predictive correlation, and (iii.) generalize these methods to auto-regressive and Laplace error models, both of which 
 are common in ecological applications \cite{Fer}. 
 
  \textbf{2. Spatio-temporal Dynamics}
 With methodologically sound and scalable algorithms in hand for the baseline static framework, I will then be in a position to begin investigating spatiotemporal generalizations of the statistical model. Given the spatiotemporal nature of most physical processes, this is an important extension that is often ignored, presumably due to computational challenges (\cite{Fer2}, [another citation]). Parameters $\theta$ may naturally be thought to vary over space
-and time; however, even if they are not then quantifying spatiotemporal variation in uncertainty can help identify 
-missing processes in physical models, as well as provide a greater understanding as to the generalizability of the process model beyond observed data \cite{Fer2, Dietze} [cite transferability study?]. To address these issues I will extend the data model as 
+and time; even if they are believed to be static, a dynamic model allows for spatially and temporally varying uncertainty estimates, which can help identify 
+missing processes in physical models, as well as provide a greater understanding of how models generalize beyond observed data \cite{Fer2, Dietze}. To address these issues I will extend the data model as 
   \[y(s, t) = f(\theta(s, t)) + \epsilon(s, t)\]
- where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs ([cite]), but it is difficult to find literature that additionally considers an 
- explicit spatiotemporal model for the process parameters $\theta$ ([cite]). As an example, recent studies concerning terrestrial carbon models have 
- allowed process parameters $\theta$ to exhibit Gaussian variability across different ecological data collection
-sites \cite{Fer2}. This constitutes a first step towards understanding the spatial variability in $\theta$, but doesn't incorporate any explicit spatial information such as a concept of ``nearness'' between the sites. Researchers in both the spatiotemporal statistics and computer modeling communities
+ where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs \cite{Sun}, but these approaches rarely incorporate a
+ explicit spatiotemporal model for the process parameters $\theta$ [cite]. Recent studies in the the terrestrial carbon modeling literature have 
+ taken a step in this direction by allowing process parameters $\theta$ to exhibit Gaussian variability across different ecological data collection
+sites \cite{Fer2}. This hierarchical structure was informative but fails to incorporate explicit spatial information such as a concept of ``nearness'' between the sites. Researchers in both the spatiotemporal statistics and computer modeling communities
 have noted the potential for integrating methods in both fields using modern advances in machine learning and computation \cite{Wikle, Baker}. My proposed research will bridge this divide by (i.) developing novel techniques to integrate modern spatiotemporal dynamical models \cite{Wikle, Hefley}
-with the computer modeling framework, (ii.) develop dimensionality reduction and approximation methods that draw from Bayesian inverse problem 
+within the computer modeling emulation framework, (ii.) develop dimensionality reduction and approximation methods that draw from Bayesian inverse problem 
 theory \cite{Kugler} and Bayesian filtering \cite{Sarkka}, and (iii.) extend my previous uncertainty quantification methodology to this more complex setting. 
  
 
@@ -142,6 +142,7 @@ Cambridge, United Kingdom and New York, NY, USA, pp. 673–816, doi:10.1017/9781
 \bibitem{Swallow} Swallow et al, Challenges in estimation, uncertainty quantification and elicitation for pandemic modelling, Epidemics, Volume 38, 2022, 100547, ISSN 1755-4365, https://doi.org/10.1016/j.epidem.2022.100547.
 \bibitem{Stuart} A. M. Stuart (2010). Inverse problems: A Bayesian perspective. Acta Numerica, 19, pp 451-559 doi:10.1017/
 S0962492910000061.
+\bibitem{Sun} Sun et al, Synthesizing simulation and field data of solar irradiance. Stat Anal Data Min: The ASA Data Sci Journal. 2019; 12: 311– 324. https://doi.org/10.1002/sam.11414
 \end{thebibliography}
 
 
