--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -65,12 +65,29 @@ Andrew Roberts
 \end{flushright} 
 
 The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. Physical models
-encapsulate prior scientific knowledge, while a Bayesian statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. This interplay between domain 
+encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. This interplay between domain 
 knowledge and statistical inference is essential for advancing scientific theory and informing high-consequence decision-making. My research goal is to develop novel methodological 
-and computational approaches for model calibration, prediction, and uncertainty quantification for scientifically-informed modeling of complex systems. 
+and computational approaches for model calibration, prediction, and uncertainty quantification using large-scale datasets for scientifically-informed modeling of complex systems [run on sentence].
 
 Computer models have become essential tools for studying complex phenomena in a wide variety of scientific and engineering disciplines, 
-tackling problems from climate projections \cite{Canadell} to pandemic response \cite{Swallow}. My proposed research program will contribute methodological 
+tackling problems from climate projections \cite{Canadell} to pandemic response \cite{Swallow}. In such settings, scientists utilize a computer model $f$ of a physical process, where the output
+is a function of some unknown, unobserved parameter $\theta$. For example, to study the terrestrial carbon cycle, ecologists use a process model $f$ 
+that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Friedlingstein, Waring}. Running the model requires specifying values for parameters that 
+may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. In order to estimate (i.e. calibrate) these unknown parameters, it is necessary to obtain observations $y$ 
+of the underlying physical process in order to tune $\theta$ so that $f(\theta) \approx y$. This problem is typically formulated in a Bayesian statistical setting due to its flexibility in accommodating
+various sources of uncertainty \cite{Kennedy, Clark}. For example, the simple yet common data model\begin{align*}
+&y \sim N(f(\theta), \sigma^2 I_n) \\
+&(\theta, \sigma^2) \sim \pi_0,
+\end{align*}
+assumes the simulator output gives the mean of the true process, subject to white noise. The prior distribution $\pi_0$ encodes previous domain knowledge about the 
+process parameters $\theta$ and statistical parameter $\sigma^2$. The problem of inferring the
+ parameters $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. Solving such a problem is defined 
+ as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2)\pi_0(\theta)$, which typically involves utilizing an iterative inference procedure like 
+ Markov Chain Monte Carlo (MCMC).
+
+
+
+My proposed research program will contribute methodological 
 advances for calibrating, predicting, and quantifying uncertainty using such models. Moreover, this research will support two 
 overarching objectives: (i.) improving data-informed decision-making under uncertainty and (ii.) advancing scientific discovery and research. To define the 
 setting of interest, let $f: \theta \mapsto \R$ denote the computer model (i.e. a simulator or process model) as a function of some unknown and unobserved
