--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -64,13 +64,24 @@ Scalable Bayesian Methods for Scientific Machine Learning
 Andrew Roberts
 \end{flushright} 
 
-The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. Physical models
-encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. This interplay between domain 
+The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
+Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. [transition]
+Computer models have become essential tools for studying complex phenomena in a wide variety of scientific and engineering disciplines, 
+tackling problems from climate projections \cite{Canadell} to pandemic response \cite{Swallow}. Combining these models with data
+is a central problem at the interface of science and statistics [cite]. Modeling these scientific-statistical relationships still presents significant challenges in 
+balancing realism with computational and statistical feasibility. Given the ubiquity of computer models in informing
+ evidence-based policy, it is essential to develop methods to handle more complex models while simultaneously providing a full accounting of uncertainties. 
+There have been recent calls highlighting the need for research that brings together state-of-the-art computational methods with modern statistical 
+and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to address this need. 
+
+
+This interplay between domain 
 knowledge and statistical inference is essential for advancing scientific theory and informing high-consequence decision-making. My research goal is to develop novel methodological 
 and computational approaches for model calibration, prediction, and uncertainty quantification using large-scale datasets for scientifically-informed modeling of complex systems [run on sentence].
 
-Computer models have become essential tools for studying complex phenomena in a wide variety of scientific and engineering disciplines, 
-tackling problems from climate projections \cite{Canadell} to pandemic response \cite{Swallow}. In such settings, scientists utilize a computer model $f$ of a physical process, where the output
+Computer models have become essential 
+
+In such settings, scientists utilize a computer model $f$ of a physical process, where the output
 is a function of some unknown, unobserved parameter $\theta$. For example, to study the terrestrial carbon cycle, ecologists use a process model $f$ 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Friedlingstein, Waring}. Running the model requires specifying values for parameters that 
 may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. In order to estimate (i.e. calibrate) these unknown parameters, it is necessary to obtain observations $y$ 
@@ -83,10 +94,17 @@ assumes the simulator output gives the mean of the true process, subject to whit
 process parameters $\theta$ and statistical parameter $\sigma^2$. The problem of inferring the
  parameters $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. Solving such a problem is defined 
  as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2)\pi_0(\theta)$, which typically involves utilizing an iterative inference procedure like 
- Markov Chain Monte Carlo (MCMC).
+ Markov Chain Monte Carlo (MCMC). [maybe mention other things people do with computer models here: UQ, prediction]
+ 
+ The use of computer models is complicated by several features commonly present in real-world applications. First, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
+emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. While this approximation is often necessary, the emulator introduces an additional source of uncertainty that is often ignored 
+or accounted for in an ad hoc manner \cite{Fer}. A second complication common in this setting arises due to the complexity of the underlying process being modeled by $f$. Simulation outputs $y$, process parameters $\theta$, and statistical parameters 
+(e.g. $\sigma^2$) may exhibit variation across space and time. Attempts to explicitly model these dynamics lead to even more computationally and statistically challenging models. For example, 
+terrestrial carbon models often face both of these challenges; sophisticated simulations can have a runtime of many hours \cite{Fer} and ecological parameters have been found to exhibit 
+spatiotemporal variation \cite{Fer2}.
 
 
-
+% Old paragraph
 My proposed research program will contribute methodological 
 advances for calibrating, predicting, and quantifying uncertainty using such models. Moreover, this research will support two 
 overarching objectives: (i.) improving data-informed decision-making under uncertainty and (ii.) advancing scientific discovery and research. To define the 
@@ -101,7 +119,7 @@ to some white noise.
 &(\theta, \sigma^2) \sim \pi_0
 \end{align*}
 Here, $\pi_0$ is a prior distribution that encodes previous domain knowledge about the process parameters $\theta$ and statistical parameter $\sigma^2$.
-The problem of inferring the parameters $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. ``Solving'' such a problem is defined as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2)\pi_0(\theta)$, which typically involves utilizing an iterative inference procedure like Markov Chain Monte Carlo (MCMC).
+The problem of inferring the parameters $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. ``Solving'' such a problem is defined as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2)\pi_0(\theta)$, which typically involves utilizing an iterative inference procedure like Markov Chain Monte Carlo (MCMC). 
 
 The use of computer models is complicated by several features commonly present in real-world applications. First, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
 emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. While this approximation is often necessary, the emulator introduces an additional source of uncertainty that is often ignored 
