--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -65,22 +65,14 @@ Andrew Roberts
 \end{flushright} 
 
 The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
-Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. [transition]
-Computer models have become essential tools for studying complex phenomena in a wide variety of scientific and engineering disciplines, 
-tackling problems from climate projections \cite{Canadell} to pandemic response \cite{Swallow}. Combining these models with data
-is a central problem at the interface of science and statistics [cite]. Modeling these scientific-statistical relationships still presents significant challenges in 
-balancing realism with computational and statistical feasibility. Given the ubiquity of computer models in informing
- evidence-based policy, it is essential to develop methods to handle more complex models while simultaneously providing a full accounting of uncertainties. 
+Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
+climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of combining these models with real-world data continues to present
+significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing
+ evidence-based policy, it is essential to develop methods to handle more complex models [different word other than model?] while simultaneously providing a full accounting of uncertainties.
 There have been recent calls highlighting the need for research that brings together state-of-the-art computational methods with modern statistical 
-and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to address this need. 
-
-
-This interplay between domain 
-knowledge and statistical inference is essential for advancing scientific theory and informing high-consequence decision-making. My research goal is to develop novel methodological 
-and computational approaches for model calibration, prediction, and uncertainty quantification using large-scale datasets for scientifically-informed modeling of complex systems [run on sentence].
+and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to address this need by developing novel methodological and computational approaches for combining large-scale datasets with [adjective?] computer models, with the goal of improving scientifically-informed modeling of complex systems. 
 
 Computer models have become essential 
-
 In such settings, scientists utilize a computer model $f$ of a physical process, where the output
 is a function of some unknown, unobserved parameter $\theta$. For example, to study the terrestrial carbon cycle, ecologists use a process model $f$ 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Friedlingstein, Waring}. Running the model requires specifying values for parameters that 
