Minor changes to intro paragraph

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -69,11 +69,10 @@ Physical models encapsulate prior scientific knowledge, while a rigorous statist
 climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of combining these models with real-world data continues to present
 significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing
  evidence-based policy, it is essential to develop methods to handle more complex models [different word other than model?] while simultaneously providing a full accounting of uncertainties.
-There have been recent calls highlighting the need for research that brings together state-of-the-art computational methods with modern statistical 
+Recent calls have highlighted the need to bring together state-of-the-art computational methods with modern statistical 
 and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to address this need by developing novel methodological and computational approaches for combining large-scale datasets with [adjective?] computer models, with the goal of improving scientifically-informed modeling of complex systems. 
 
-Computer models have become essential 
-In such settings, scientists utilize a computer model $f$ of a physical process, where the output
+[Better intro] Scientists often utilize a computer model $f$ of a physical process, where the output
 is a function of some unknown, unobserved parameter $\theta$. For example, to study the terrestrial carbon cycle, ecologists use a process model $f$ 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Friedlingstein, Waring}. Running the model requires specifying values for parameters that 
 may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. In order to estimate (i.e. calibrate) these unknown parameters, it is necessary to obtain observations $y$ 
